# Formula-Evaluator

./: CMakeLists.txt  CMakePresets.json  README.md  run1.bat  run2.bat  run3.bat
Config/: cfg.multi-files.txt  cfg.txt  data.addon.txt  data.example.txt  empty.txt  formulas.addon.txt  formulas.example.txt  formulas.invalid.txt
Example/: CMakeLists.txt
Example/Config/: cfg.txt  data.example.txt  formulas.example.txt
Example/Scripts/: run.1.cmd.in  run.2.cmd.in  run.3.cmd.in
Formula Evaluator/: CMakeLists.txt  Dataset.cpp  Dataset.h  FormulaEvaluator.cpp  FormulaEvaluator.h  FormulaEvaluatorOptions.cpp  FormulaEvaluatorOptions.h  main.cpp
Formula Evaluator/Calculator/: Calculator.cpp  Calculator.h  CalculatorOperator.cpp  CalculatorOperator.h  CalculatorSlot.cpp  CalculatorSlot.h
Formula Evaluator/Parsers/: DataParser.cpp  DataParser.h  FormulaParser.cpp  FormulaParser.h
Formula Evaluator/Utilities/: DoubleToStr.cpp  DoubleToStr.h  LoggingUtilities.h  ThreadRandomSleep.cpp  ThreadRandomSleep.h
FormulaEvaluator/: CMakeLists.txt  Dataset.cpp  Dataset.h  FormulaEvaluator.cpp  FormulaEvaluator.h  FormulaEvaluatorOptions.cpp  main.cpp
FormulaEvaluator/Calculator/: CalculatorOperator.cpp  CalculatorOperator.h  CalculatorSlot.cpp  CalculatorSlot.h
FormulaEvaluator/Utilities/: DoubleToStr.h
